### 1.4.19
Added: Check if array key "title" or "label" exists in translation array

### 1.4.18
Fixed: Show correct translated label in backend filter
Update: Respect the published field

### 1.4.17
Update: Store the roots Session only in popup windows

### 1.4.16
Fixed: Wrong language in labels in backend filter selects (#27)
Fixed: An issue when displaying in backend wildcard

### 1.4.15
Added: Support language switching in TableTree widget (requires CustomCatalog >= 1.3.4, pct_tabletree_wdiget >= 1.3.1) (#25)

### 1.4.14
Added: Support the tag_where conditions field (#22)

### 1.4.13
Added: Custom sorting in widget (#18)
Update: Show translated labels in filter selection in backend

### 1.4.12
Update: Remove the switchToEdit DCA option
Update: Set the backend icon on any possible way

### 1.4.11
Fixed: Do not update child elements when renaming parent node (#9)
Added: Copy with childs feature (#10)
Update: Set the backend module icon via css

### 1.4.10
Update: Added more engl. translations
Update: Minor updates

### 1.4.9
Update: Support conditional filtering and count values in template

### 1.4.8
Fixed: Module logo not showing when internal cache is active (#6)
Update: Support for new CE Export (CE >= 1.4.0)

### 1.4.7
Update: Check if translations field has values to avoid foreach php error

### 1.4.6
Fixed: Sorting for filter values (#4)
Added: Find translation and set translations when rendering
Added: Fallback for metaWizard under Contao 3.2 (#5)
Update: Included blank option for tl_pct_customelement_attribute.tag_translations

### 1.4.5
Fixed: Errors when custom tables not exist
Update: New filter template structure
Update: Support for translations

### 1.4.4
Fixed: Set the default table in eval array
Fixed: Explode values array in filter class
Added: Generate the link url in the options array
Added: processWildcardValue Callback
Update: Option id now starts with ctrl_